Fix (Entity): Page display entity logo on header Fix (Entity): Correct spacing on h1, h2 elements on body content

--- a/scss/_base_styles.scss
+++ b/scss/_base_styles.scss
@@ -24,7 +24,6 @@ h2 {
   font: normal;
   letter-spacing: 0.3px;
   color: #060606;
-  margin-top: 1.5em;
   margin-bottom: 0.5em;
 }
 h3 {
@@ -2784,7 +2783,6 @@ body.text-page article h2,
 h4 {
   padding: 0px;
   left: -10px;
-  margin-top: 1.5em;
   margin-bottom: 0.5em;
   font-weight: 500 !important;
   font-size: 1.4em !important;
