--- a/scss/_pages.scss
+++ b/scss/_pages.scss
@@ -1,4 +1,5 @@
-.page-detail {
+.page-detail,
+.entity-page-detail {
     background-image: url("../img/waves_courses.svg");
     background-position: top left;
     background-repeat: no-repeat;
@@ -48,5 +49,19 @@
             background-color: $naublue;
         }
 
+    }
+
+    &-logo {
+        min-width: 340px;
+        display: flex;
+        justify-content: center;
+
+        img {
+            max-height: 120px;
+            max-width: 200px;
+            width: auto;
+            height: auto;
+            object-fit: contain;
+        }
     }
 }
